# rust-workflows

./: .dockerignore  Cargo.toml  Dockerfile  README.md  RELEASE.md
.github/: dependabot.yaml
.github/workflows/: ci.yaml  dependabot.yaml  release.yaml
src/: main.rs
