[package]
name = "rust-workflows"
version = "0.2.1"
edition = "2021"
description = "A reference for GitHub Action workflows to use on Rust projects"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.3"
env_logger = "0.9"
